compiler/crates/types/tests/typeerr/return_wrong_type.th
ฟังก์ชัน f() -> จำนวนเต็ม {
    คืน "oops";
}
